--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     "permissions": ["tabs"],
     "action": {
         "default_title": "Bookmark URL",
-        "default_popup": "popup.html"
+        "default_popup": "popup/popup.html"
     },
     "icons": {
         "16": "icons/bookmark-16.png",
