--- a/manifest.json
+++ b/manifest.json
@@ -9,8 +9,7 @@
     "permissions": [
         "tabs",
         "storage",
-        "cookies",
-        "*//*.projectonair.com"
+        "cookies"
     ],
     "host_permissions": [
         "https://www.projectonair.com/",
@@ -18,7 +17,7 @@
     ],
     "action": {
         "default_title": "Bookmark URL",
-        "default_popup": "popup/popup.html"
+        "default_popup": "popup/sign-in.html"
     },
     "icons": {
         "16": "icons/bookmark-16.png",
