--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
     ],
     "action": {
         "default_title": "Bookmark URL",
-        "default_popup": "popup/sign-in.html"
+        "default_popup": "popup/bookmark.html"
     },
     "icons": {
         "16": "icons/bookmark-16.png",
